@@ -194,9 +194,9 @@ Foreign table options
 
 - **dblink** (optional)
 
-  The dblink through which the table is accessed.  This name must be written
-  exactly as it occurs in Oracle's system catalog, so normally consist of
-  uppercase letters only.
+  The Oracle database link through which the table is accessed.  This name
+  must be written exactly as it occurs in Oracle's system catalog, so
+  normally consist of uppercase letters only.
 
 - **schema** (optional)
 
@@ -500,22 +500,28 @@ following:
   but not synonyms.
 
 - There are four supported options for IMPORT FOREIGN SCHEMA:
+
   - **case**: controls case folding for table and column names during import.  
     The possible values are:
     - `keep`: leave the names as they are in Oracle, usually in upper case.
     - `lower`: translate all table and column names to lower case.
     - `smart`: only translate names that are all upper case in Oracle
                (this is the default).
+
   - **collation**: the collation used for case folding for the `lower` and
     `smart` options of **case**.  
+
     The default value is `default` which is the database's default collation.
     Only collations in the `pg_catalog` schema are supported.
     See the `collname` values in the `pg_collation` catalog for a list of
     possible values.
-  - **dblink**: the dblink through which the schema is accessed.
+
+  - **dblink**: the Oracle database link through which the schema is accessed.
     This name must be written exactly as it occurs in Oracle's system catalog,
     so normally consist of uppercase letters only.
+
   - **readonly** (boolean): controls if imported tables can be modified.
+
     If set to `true`, all imported tables are created with the foreign
     table option **readonly** set to `true` (see the [Options](#3-options)
     section).  
